# Beyond-ChatGPT

./: LICENSE  README.md  pyproject.toml
app/: hello_world.ipynb
